# neusym-bridge

./: .gitignore  README.md  pyproject.toml
checkpoints/: model_a.pt  model_b.pt  model_c.pt
configs/: phase1.yaml  phase2.yaml  phase4.yaml
docs/results/: conclusion.md  layer_cka.json  phase1-common-structure.md  phase1_raw_results.json  phase1_verdict.json  phase2-physics-correspondence.md  phase2_raw_results.json  phase2_verdict.json  phase3-collapse-mechanism.md  phase3_verdict.json  phase4-end-to-end.md  phase4_raw_results.json  phase4_verdict.json  relatum_auto_generated.pl
experiments/a1/: evaluate_a1.py  run_a1.py  train_a1.py
experiments/a4/: architectures.py  evaluate_a4.py  models.py  run_a4.py
experiments/ablation_norelatum/: run_norelatum.py
experiments/b3/: analyze.py  cross_model.py  intervention_robust.py  report.py  run_b3.py
experiments/b4/: calibration.py  noisy_or_calibration.py  run_b4.py  threshold_sensitivity.py
experiments/contrastive_full/: run_contrastive_full.py
experiments/energy_opt/: retrain_lewm_simplified.py  run_lambda_sweep.py
experiments/exec_aware/: consistency_metric.py  dataset.py  model.py  run_consistency_analysis.py  run_diagnostic.py  run_exec_aware.py  run_pyela_500.py  (+5 more)
phase4/: __init__.py  phase4_report.py
results/: cka_matrix.npy  layer_cka.json  phase1_raw_results.json  phase1_verdict.json
rules/: heat_rules.pl
scripts/: run_phase0.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py
tests/: test_heat_equation.py  test_model.py  test_phase2.py  test_phase3.py  test_representation.py
(+112 files in other folders)
